--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/wechat_pay?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
+    url: jdbc:mysql://localhost:3306/wechat_pay?useUnicode=true&characterEncoding=utf8&useSSL=false
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
