--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,10 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
   jackson:
-      default-property-inclusion: non_null
+    default-property-inclusion: non_null
+  redis:
+     host: 192.168.133.128
+     port: 6379
 wechat:
   mpAppId: wxf9676f9cb88f48b8
   mpAppSecret: cc24d3836a8d3e0760c766b559767c2d
